Initial Message from client devices implemented, json parsing, saving, loading implemented, Some examples made fro debugging like sending and receiving the message class data, payload, etc. Implemented some file helper functions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,13 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "future": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "format": "cpp",
+        "fstream": "cpp",
+        "span": "cpp",
+        "variant": "cpp"
     }
 }
