File tree restructuralization, Made separate ESP32 and ESP8266 directories, both should be communicating with the server, All seems to be okay for now

--- a/Devices/ESP_Devices/8266/platformio.ini
+++ b/Devices/ESP_Devices/8266/platformio.ini
@@ -5,5 +5,6 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 115200
 build_flags = 
-    -DCORE_DEBUG_LEVEL=5  ; Optional: enable debug logging
-lib_deps =  
+    -DCORE_DEBUG_LEVEL=5
+    -I../../../
+ 
