--- a/Devices/ESP_Devices/32/platformio.ini
+++ b/Devices/ESP_Devices/32/platformio.ini
@@ -9,3 +9,18 @@ build_flags =
     -DCORE_DEBUG_LEVEL=5   
     -std=gnu++17
     -I../../../
+
+[env:esp32-c3]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+
+upload_speed = 921600
+monitor_speed = 115200
+
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1 
+    -DARDUINO_USB_MODE=1
+    -DCORE_DEBUG_LEVEL=5   
+    -std=gnu++17
+    -I../../../
